<resources>
    <string name="app_name">AppFragmentMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentprincipal">Principal</string>
    <string name="fragmentgaleria">Galería</string>
    <string name="fragmentcompartir">Compartir</string>
    <string name="fragmentherramientas">Herramientas</string>
    <string name="valtvtitulo">Ejercicio 1</string>
    <string name="valetnota1">Ingrese nota 1</string>
    <string name="valetnota2">Ingrese nota 2</string>
    <string name="valetnota3">Ingrese nota 3</string>
    <string name="valetnota4">Ingrese nota 4</string>
    <string name="valbtncalcular">Calcular</string>
</resources>
